# gen-z-alpha-translator

./: .gitignore  README.md  USER_MANUAL.md  app.py  mini-project-proposal_Grp2.docx  pyproject.toml  serve.py  train_genz_translator.ipynb
data/: README_BEFORE_UPLOAD.md  source info.csv
data/dictionaries/: gen_zz_words.csv  genz_slang.csv  urban_slang.csv
data/processed/: eval.jsonl
data/raw/: genz_dataset.csv  synthetic_slang.csv
data/unused/: KamusGenAlpa.xlsx  final dataset.xlsx  genz_dataset_model_ready.csv  genz_slang_dataset_final(2020_2026).csv  genz_slang_merged.csv.xlsx
docs/: Group2_GenZ_Slang_Translator_Slides.pptx  slangify_mockup.html  slides_outline.md
docs/archive/huimin-nvidia-pipeline/: README.md
docs/superpowers/specs/: 2026-07-13-genz-slang-translator-design.md
genz_lora_adapter/: adapter_config.json
results/: grading_sheet.csv  grading_sheet_post_grok.csv
src/: __init__.py  config.py  eval_icl.py  fetch_urban.py  prepare_data.py  slang_terms.py  teacher.py  translate_core.py
src/sdg/: attributes.py  generate.py  validate.py
tests/: test_eval_icl.py  test_generate.py  test_slang_terms.py  test_teacher.py  test_validate.py
